corrected intro.sass (wrong font for ul>li)

--- a/assets/styles/css/styles.css
+++ b/assets/styles/css/styles.css
@@ -353,7 +353,6 @@ body {
   font-weight: 400;
   line-height: 29px;
   font-size: 24px;
-  font-family: sans-serif;
   padding-top: 1rem;
   padding-bottom: 1rem;
   max-width: 500px;
