--- a/assets/styles/sass/blocks/intro.sass
+++ b/assets/styles/sass/blocks/intro.sass
@@ -34,7 +34,6 @@
 	&__list__item
 		list-style: none
 		@include montserrat-400-24
-		font-family: sans-serif
 		padding-top: 1rem
 		padding-bottom: 1rem
 		max-width: 500px
